syntax = "proto3";

package atomix.cluster;

import "google/protobuf/duration.proto";

option java_package = "io.atomix.cluster.discovery";
option java_multiple_files = true;

// Cluster node
message Node {
    string id = 1;
    string namespace = 2;
    string host = 3;
    int32 port = 4;
}

// Node discovery event
message DiscoveryEvent {
    Type type = 1;
    Node node = 2;

    enum Type {
        JOIN = 0;
        LEAVE = 1;
    }
}

// Node discovery configuration
message DiscoveryConfig {
    oneof config {
        BootstrapDiscoveryConfig bootstrap = 1;
        DnsDiscoveryConfig dns = 2;
    }
}

// Bootstrap discovery configuration
message BootstrapDiscoveryConfig {
    google.protobuf.Duration heartbeat_interval = 1;
    int32 failure_threshold = 2;
    google.protobuf.Duration failure_timeout = 3;
    repeated Node nodes = 4;
}

// DNS discovery configuration.
message DnsDiscoveryConfig {
    string service = 1;
    google.protobuf.Duration resolution_interval = 2;
}
